Follow/Unfollow mechanism finally works after creating new route resources (Some stuff might still be a bit broken...). Made retrieval functions inside Models. Added LaravelCollective/HTML dependency, modified the profile templates. Still need to fix button unaligned issue.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -67,3 +67,6 @@
 .header {
     margin-bottom: 20px;
 }
+.btn-rounded {
+    border-radius: 17px;
+}
